source/gen/tlibc_json_reader_l.c
/* Generated by re2c 0.13.5 on Tue Jun 03 16:28:14 2014 */
#line 1 "D:/GitHub/TLibC/source/protocol/tlibc_json_reader_l.re"
#include "platform/tlibc_platform.h"
#include "protocol/tlibc_json_reader.h"
#include "protocol/tlibc_json_reader_scanner.h"
#include "tlibc_json_reader_l.h"
#include <string.h>




		
tlibc_json_reader_token_t tlibc_json_reader_scan(tlibc_json_reader_t *self)
{
	tlibc_json_reader_scanner_context_t *sp = NULL;
	self->error_code = E_TLIBC_NOERROR;
restart:
	sp = &self->scanner_context_stack;
	if(YYCURSOR >= YYLIMIT)
	{
		return tok_end;
	}
	sp->yylloc.first_line = sp->yylineno;
	sp->yylloc.first_column = sp->yycolumn;
	yytext = YYCURSOR;

#line 28 "D:/GitHub/TLibC/source/gen/tlibc_json_reader_l.c"
{
	YYCTYPE yych;
	switch (YYGETCONDITION()) {
	case yycINITIAL: goto yyc_INITIAL;
	}
/* *********************************** */
yyc_INITIAL:

	YYFILL(4);
	yych = *YYCURSOR;
	switch (yych) {
	case '<':	goto yy4;
	default:	goto yy2;
	}
yy2:
	++YYCURSOR;
yy3:
	yyleng = YYCURSOR - yytext; tlibc_json_reader_locate(self);
#line 54 "D:/GitHub/TLibC/source/protocol/tlibc_json_reader_l.re"
	{ goto restart;					 }
#line 49 "D:/GitHub/TLibC/source/gen/tlibc_json_reader_l.c"
yy4:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '!':	goto yy9;
	case '/':	goto yy5;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy7;
	default:	goto yy3;
	}
yy5:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case '>':	goto yy6;
	default:	goto yy16;
	}
yy6:
	YYCURSOR = YYMARKER;
	goto yy3;
yy7:
	++YYCURSOR;
	YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy7;
	case '>':	goto yy13;
	default:	goto yy6;
	}
yy9:
	yych = *++YYCURSOR;
	switch (yych) {
	case '-':	goto yy10;
	default:	goto yy6;
	}
yy10:
	yych = *++YYCURSOR;
	switch (yych) {
	case '-':	goto yy11;
	default:	goto yy6;
	}
yy11:
	++YYCURSOR;
	yyleng = YYCURSOR - yytext; tlibc_json_reader_locate(self);
#line 36 "D:/GitHub/TLibC/source/protocol/tlibc_json_reader_l.re"
	{
	const char * comment_begin = NULL;
	for(comment_begin = YYCURSOR; YYCURSOR != YYLIMIT; ++YYCURSOR)
	{
		if(YYCURSOR - comment_begin >= 2)
		{
			if((*(YYCURSOR - 2) == '-') && (*(YYCURSOR - 1) == '-') && (*(YYCURSOR - 0) == '>'))
			{
				goto restart;
			}
		}
	}
	goto restart;
}
#line 230 "D:/GitHub/TLibC/source/gen/tlibc_json_reader_l.c"
yy13:
	++YYCURSOR;
	yyleng = YYCURSOR - yytext; tlibc_json_reader_locate(self);
#line 51 "D:/GitHub/TLibC/source/protocol/tlibc_json_reader_l.re"
	{return tok_tag_begin;															}
#line 236 "D:/GitHub/TLibC/source/gen/tlibc_json_reader_l.c"
yy15:
	++YYCURSOR;
	YYFILL(1);
	yych = *YYCURSOR;
yy16:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy15;
	case '>':	goto yy17;
	default:	goto yy6;
	}
yy17:
	++YYCURSOR;
	yyleng = YYCURSOR - yytext; tlibc_json_reader_locate(self);
#line 52 "D:/GitHub/TLibC/source/protocol/tlibc_json_reader_l.re"
	{return tok_tag_end;															}
#line 314 "D:/GitHub/TLibC/source/gen/tlibc_json_reader_l.c"
}
#line 55 "D:/GitHub/TLibC/source/protocol/tlibc_json_reader_l.re"
	
}
